fix: resolve semantic-release permissions and trusted publisher setup
- Add required permissions (contents:write, issues:write, id-token:write) to GitHub Actions
- Configure checkout with persist-credentials for git operations
- Update semantic-release to use trusted publisher instead of API tokens
- Disable failure issue creation to avoid permission conflicts
- Separate PyPI publishing from semantic-release using trusted publisher action

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -44,13 +44,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "sed -i 's/version = \".*\"/version = \"${nextRelease.version}\"/' pyproject.toml && sed -i 's/__version__ = \".*\"/__version__ = \"${nextRelease.version}\"/' src/dosctl/__init__.py"
-      }
-    ],
-    [
-      "@semantic-release/exec",
-      {
-        "publishCmd": "python -m build && python -m twine upload dist/* --username __token__ --password $PYPI_TOKEN"
+        "prepareCmd": "sed -i 's/version = \".*\"/version = \"${nextRelease.version}\"/' pyproject.toml && sed -i 's/__version__ = \".*\"/__version__ = \"${nextRelease.version}\"/' src/dosctl/__init__.py && python -m build"
       }
     ],
     [
@@ -78,7 +72,9 @@
             "path": "dist/*.tar.gz", 
             "label": "Source Distribution"
           }
-        ]
+        ],
+        "failComment": false,
+        "failTitle": false
       }
     ]
   ]
