fix: simplify semantic-release configuration for reliability
- Remove complex git plugin that was causing permission issues
- Use minimal plugin configuration (analyzer, notes, exec, github)
- Simplify GitHub Actions workflow
- Move legal disclaimer to end of README for better UX
- Focus on core functionality: version bump, build, GitHub release, PyPI publish

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -2,11 +2,7 @@ name: Semantic Release
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [main]
 
 permissions:
   contents: write
@@ -17,48 +13,37 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main'
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-          persist-credentials: true
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build twine
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install semantic-release
-        run: |
-          npm install -g semantic-release @semantic-release/changelog @semantic-release/git @semantic-release/github @semantic-release/exec
+          pip install build
+          npm install -g semantic-release @semantic-release/exec @semantic-release/github
 
       - name: Run tests
         run: |
           pip install -e ".[dev]"
           python -m pytest
 
-      - name: Semantic Release
-        id: semantic-release
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
-        
+
       - name: Publish to PyPI
         if: hashFiles('dist/*') != ''
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: dist/
