feat: complete semantic release automation setup
- Configure PyPI trusted publisher in GitHub Actions workflow
- Add environment protection for secure PyPI publishing
- Update release configuration for automated versioning
- Improve legal disclaimers and documentation

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -12,7 +12,8 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
-    
+    environment: pypi
+
     steps:
       - uses: actions/checkout@v4
         with:
