fix: add git plugin to semantic-release for version commits
- Add @semantic-release/git plugin to commit version updates
- Configure git plugin to commit pyproject.toml and __init__.py changes
- This ensures version numbers in source code match release tags
- Fixes discrepancy where tags were created but source versions not updated

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install build
-          npm install -g semantic-release @semantic-release/exec @semantic-release/github
+          npm install -g semantic-release @semantic-release/exec @semantic-release/github @semantic-release/git
 
       - name: Run tests
         run: |
