--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,6 +12,13 @@
             }
         ],
         [
+            "@semantic-release/git",
+            {
+                "assets": ["pyproject.toml", "src/dosctl/__init__.py"],
+                "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+            }
+        ],
+        [
             "@semantic-release/github",
             {
                 "assets": [
