--- a/.releaserc.json
+++ b/.releaserc.json
@@ -14,7 +14,10 @@
         [
             "@semantic-release/git",
             {
-                "assets": ["pyproject.toml", "src/dosctl/__init__.py"],
+                "assets": [
+                    "pyproject.toml",
+                    "src/dosctl/__init__.py"
+                ],
                 "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
             }
         ],
