--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "sed -i 's/version = \".*\"/version = \"${nextRelease.version}\"/' pyproject.toml && sed -i 's/__version__ = \".*\"/__version__ = \"${nextRelease.version}\"/' src/dosctl/__init__.py && python -m build"
+                "prepareCmd": "./scripts/prepare-release.sh ${nextRelease.version}"
             }
         ],
         [
