feat: add internet play with discovery codes, UPnP, and host options
Add discovery code system (WORD-NNNNN format) to encode IP:port into
human-friendly codes for sharing. Implement stdlib-only UPnP IGD port
mapper for automatic router port forwarding.

Add --internet flag to 'net host' for internet play, --public-ip to
skip IP detection, and --no-upnp to bypass port mapping when already
configured. The join command auto-detects discovery codes vs raw IPs.

Extract word list to external wordlist.txt (8 words/line). Clean up
unused imports, stale Phase 2 docstrings, and type-checker issues.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,6 @@ dosctl = "dosctl.main:cli"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"dosctl.lib" = ["wordlist.txt"]
